# tarot

./: .coverage  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
.trae/documents/: Fix _question 路由与语言不稳定.md
.trae/rules/: project_rules.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  pytest.ini  sources.list
backend/alembic/: README.rst  env.py
backend/alembic/versions/: .gitkeep
backend/app/: __init__.py  main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  health.py  payment.py  quota.py  tarot.py
backend/app/core/: config.py  database.py  exceptions.py  redis.py  schemas.py
backend/app/data/: __init__.py  tarot_cards.py
backend/app/data/i18n/: messages.json
backend/app/models/: __init__.py  base.py  payment.py  reading.py  user.py
backend/app/services/: auth_service.py  llm_service.py  quota_service.py
backend/app/templates/prompts/: interpretation.j2  system.j2  validation.j2
backend/tests/: conftest.py  test_main.py
backend/tests/api/: test_auth.py  test_payment.py  test_quota.py  test_tarot.py
backend/tests/models/: test_payment.py  test_reading.py  test_user.py
backend/tests/services/: test_auth_service.py  test_llm_service.py  test_quota_service.py
docs/: deployment-and-operations.md  development-workflow.md  tarot-mvp.md  tdd-workflow.md
docs/backend/: auth-strategy.md  llm-integration.md  payment-flow.md  quota-strategy.md
docs/design/: api-design.md  backend-architecture.md  data-model.md  frontend-architecture.md  state-flow.md  ui-ux.md
docs/frontend/: animation-spec.md  component-design.md  pages-flow.md  progress-board.md
docs/product/: prd.md  user-flow.md
frontend/: .env.production  next.config.js  package-lock.json  package.json  vitest.config.mjs
frontend/messages/: en.json  zh.json
frontend/src/: i18n.ts  middleware.ts
frontend/src/__tests__/: setup.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/i18n/: request.ts
frontend/src/lib/: api-client.ts
frontend/src/types/: tarot.ts
scripts/: process_tarot_data.py  sync_i18n.py
(+20 files in other folders)
